@@ -320,23 +320,27 @@ out:
 	return NULL;
 }
 
-static void enqueue_event(const struct fanotify_event_metadata *metadata)
-{
-	if (q_append(q, metadata)) {
-		msg(LOG_DEBUG, "enqueue error");
-		close(metadata->fd);
-	} else
-		set_ready();
-}
-
-static void approve_event(const struct fanotify_event_metadata *metadata)
+static void reply_event(const struct fanotify_event_metadata *metadata,
+			unsigned reply)
 {
 	struct fanotify_response response;
 
 	response.fd = metadata->fd;
-	response.response = FAN_ALLOW;
+	response.response = reply;
 	close(metadata->fd);
 	write(fd, &response, sizeof(struct fanotify_response));
+}
+
+static void enqueue_event(const struct fanotify_event_metadata *metadata)
+{
+	if (q_append(q, metadata)) {
+		// We have to deny. This allows the kernel to free it's
+		// memory related to this request. reply_event also closes
+		// the descriptor, so we don't need to do it here.
+		reply_event(metadata, FAN_DENY);
+		msg(LOG_DEBUG, "enqueue error");
+	} else
+		set_ready();
 }
 
 void handle_events(void)
@@ -375,7 +379,7 @@ void handle_events(void)
 		if (metadata->fd >= 0) {
 			if (metadata->mask & mask) {
 				if (metadata->pid == our_pid)
-					approve_event(metadata);
+					reply_event(metadata, FAN_ALLOW);
 				else
 					enqueue_event(metadata);
 			}
