@@ -1,4 +1,5 @@
 1.1.4
+- Fix descriptor leak on enqueue failure (Steven Brzozowski)
 
 1.1.3
 - Replace snprintf integer to char conversion with uitoa function
